test/compilable/parse6415.d
class C
{
    invariant() pure nothrow @safe { }
    @safe nothrow invariant() pure { }
}

void main() { }
