test/fail_compilation/fail259.d
class C
{
    final
	override void foo(){}
}

